ecmascript/parser/tests/test262-error-references/fail/2f4d2b0c0c1f960f.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/2f4d2b0c0c1f960f.js:1:4
  |
1 | 0b12
  |    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/2f4d2b0c0c1f960f.js:1:1
  |
1 | 0b12
  | ^^^

